// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminSectoresComponent snapshot testing with no properties 1`] = `""`;

exports[`AdminSectoresComponent snapshot testing with two sectors 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Admin Sectores
    </title>
  </HelmetWrapper>
  <div
    className="form"
  >
    <ThemedList
      className="list"
      composeTheme="deeply"
      mapThemrProps={[Function]}
      ripple={false}
      selectable={false}
    >
      <Sector
        checked={false}
        key="constitucion"
        onChange={[Function]}
        sector={
          Object {
            "descr": "Estación Constitución, Ciudad de Buenos Aires, Argentina",
            "descrCorta": "Constitución",
            "idSector": "constitucion",
          }
        }
      />
      <Sector
        checked={false}
        key="retiro"
        onChange={[Function]}
        sector={
          Object {
            "descr": "Mentira, apenas una línea",
            "descrCorta": "Retiro",
            "idSector": "retiro",
          }
        }
      />
    </ThemedList>
    <ThemedNavigation
      actions={Array []}
      className="buttons"
      composeTheme="deeply"
      mapThemrProps={[Function]}
      routes={Array []}
      type="horizontal"
    >
      <ThemedThemed
        accept=".json"
        composeTheme="deeply"
        disabled={false}
        icon="file_upload"
        label="Agregar"
        mapThemrProps={[Function]}
        name="archivo"
        onChange={[Function]}
        raised={true}
        ripple={true}
        rippleCentered={false}
        rippleClassName=""
        rippleMultiple={true}
        rippleSpread={2}
      />
      <ThemedThemed
        composeTheme="deeply"
        disabled={true}
        icon="delete"
        label="Delete"
        mapThemrProps={[Function]}
        name="delete"
        onClick={[Function]}
        raised={true}
        ripple={true}
        rippleCentered={false}
        rippleClassName=""
        rippleMultiple={true}
        rippleSpread={2}
      />
    </ThemedNavigation>
  </div>
</div>
`;

exports[`Sector snapshot testing with sector, checked 1`] = `
<ThemedListCheckbox
  caption="descripción corta"
  checked={true}
  composeTheme="deeply"
  disabled={false}
  legend="descripción"
  mapThemrProps={[Function]}
  onChange={[Function]}
/>
`;

exports[`Sector snapshot testing with sector, not checked 1`] = `
<ThemedListCheckbox
  caption="descripción corta"
  checked={false}
  composeTheme="deeply"
  disabled={false}
  legend="descripción"
  mapThemrProps={[Function]}
  onChange={[Function]}
/>
`;
